--- a/design/lifefranca/stylesheets/lifefranca.css
+++ b/design/lifefranca/stylesheets/lifefranca.css
@@ -165,7 +165,7 @@
         margin: 20px 0
     }
 }
-
+/*
 .base-layer-buttons{
     position: absolute;
     z-index: 200;
@@ -185,7 +185,7 @@
     border-radius: 2px;
     text-decoration: none !important
 }
-
+*/
 .leaflet-tile-pane {
   filter: grayscale(100%); 
 }
