--- a/design/lifefranca/stylesheets/lifefranca.css
+++ b/design/lifefranca/stylesheets/lifefranca.css
@@ -186,6 +186,6 @@
     text-decoration: none !important
 }
 */
-.leaflet-tile-pane {
+.map-gray .leaflet-tile-pane {
   filter: grayscale(100%); 
 }
